--- a/src/sections/projects/style.css
+++ b/src/sections/projects/style.css
@@ -1,5 +1,5 @@
 .projects {
-  padding-top: 7rem;
+  padding-top: 8rem;
   padding-bottom: 9rem;
 }
 
@@ -41,9 +41,16 @@
   }
 }
 
+@media screen and (max-width: 475px) {
+  .projects {
+    padding-top: 7rem;
+    /* padding-bottom: 5rem; */
+  }
+}
+
 @media screen and (max-width: 375px) {
   .projects {
-    padding-top: 5rem;
+    padding-top: 6rem;
     padding-bottom: 2rem;
   }
 
